# fabric-hello

./: fabric.toys.hello.desktop.in  meson.build  package.nix
src/: main.vala  meson.build
